--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,4 +35,16 @@
   template:
     src: jdk.sh.j2
     dest: /etc/profile.d/jdk.sh
-    mode: 0755
+    owner: root
+    group: root
+    mode: 0644
+  when: environ_type == 'vagrant'
+- name: Set owner for Java directory
+  become: yes
+  ansible.builtin.file:
+    path: "{{ java_home }}"
+    state: directory
+    owner: vagrant
+    group: vagrant
+    recurse: yes
+  when: environ_type == 'vagrant'
