--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,2 @@
 ---
-  jdk_distr_type: remote
-  jdk_url: "{{ openjdk[11] }}"
-  jdk_distr_name: openjdk-11+28_linux-x64_bin.tar.gz
-  jdk_folder: "{{ jdk_distr_name.split('-')[:2] | join('-')  }}"
-  java_home: "/opt/jdk/{{ jdk_folder }}"
-  environ_type: "docker"
+elasticsearch_version: "7.14.0"
