add download apt

--- a/tasks/download_apt.yml
+++ b/tasks/download_apt.yml
@@ -6,9 +6,10 @@
   delegate_to: localhost
   register: download_elastic
   until: download_elastic is succeeded
+  when: elastic_install_type == 'remote'
 - name: Install Elasticsearch
   become: true
-  apt:
-    deb: "/tmp/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
-    state: present
+  copy:
+    src: "files/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
+    dest: "/tmp/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
   notify: restart Elasticsearch
