--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,2 @@
 ---
-supported_systems: ['CentOS', 'Red Hat Enterprise Linux', 'Ubuntu' ]
+supported_systems: ['CentOS', 'Red Hat Enterprise Linux', 'Ubuntu', 'Debian' ]
