--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
-- include: precheck.yml
-- include: "install_{{ ansible_facts.pkg_mgr }}.yml"
-- include: configure.yml
+- import_tasks: precheck.yml
+- import_tasks: "download_{{ ansible_facts.pkg_mgr }}.yml"
+- import_tasks: "install_{{ ansible_facts.pkg_mgr }}.yml"
+- import_tasks: configure.yml
