--- a/tasks/download_apt.yml
+++ b/tasks/download_apt.yml
@@ -7,8 +7,7 @@
   register: download_elastic
   until: download_elastic is succeeded
   when: elastic_install_type == 'remote'
-- name: Install Elasticsearch
-  become: true
+- name: Copy Elasticsearch to manage host
   copy:
     src: "files/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
     dest: "/tmp/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
