--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -3,5 +3,6 @@
   become: true
   template:
     src: elasticsearch.yml.j2
+    mode: 0644
     dest: /etc/elasticsearch/elasticsearch.yml
   notify: restart Elasticsearch
