--- a/tasks/download_yum.yml
+++ b/tasks/download_yum.yml
@@ -4,7 +4,7 @@
     url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elasticsearch_version }}-x86_64.rpm"
     dest: "files/elasticsearch-{{ elasticsearch_version }}-x86_64.rpm"
   register: download_elastic
-  delegate_to: localhsot
+  delegate_to: localhost
   until: download_elastic is succeeded
   when: elastic_install_type == 'remote'
 - name: Copy Elasticsearch to managed node
