--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ deps =
     ansible210: ansible<3.0
     ansible30: ansible<3.1
 commands =
-    {posargs:ansible --version}
+    {posargs:molecule test -s alternative --destroy=always}
