--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,13 +2,16 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
+  name: podman
+lint: |
+  ansible-lint .
+  yamllint .
 platforms:
   - name: centos7
     image: docker.io/pycontribs/centos:7
     pre_build_image: true
   - name: ubuntu
-    image: docker.io/pycontribs/ubuntu:latest
+    image: docker.io/pycontribs/ubunut:latest
     pre_build_image: true
 provisioner:
   name: ansible
