--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,10 @@ skipsdist = true
 
 [testenv]
 deps =
-    -rtest-requirements.txt
+    -rtox-requirements.txt
     ansible28: ansible<2.9
     ansible29: ansible<2.10
     ansible210: ansible<3.0
     ansible30: ansible<3.1
 commands =
-    {posargs:molecule test -s alternative --destroy=always}
+    {posargs:molecule test -s tox --destroy=always}
