--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,7 +11,7 @@ platforms:
     image: docker.io/pycontribs/centos:7
     pre_build_image: true
   - name: ubuntu
-    image: docker.io/pycontribs/ubunut:latest
+    image: docker.io/pycontribs/ubuntu:latest
     pre_build_image: true
 provisioner:
   name: ansible
