--- a/tasks/download_apt.yml
+++ b/tasks/download_apt.yml
@@ -3,6 +3,7 @@
   get_url:
     url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
     dest: "files/elasticsearch-{{ elasticsearch_version }}-amd64.deb"
+    validate_certs: false
   delegate_to: localhost
   register: download_elastic
   until: download_elastic is succeeded
