--- a/tasks/download_yum.yml
+++ b/tasks/download_yum.yml
@@ -3,6 +3,7 @@
   get_url:
     url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elasticsearch_version }}-x86_64.rpm"
     dest: "files/elasticsearch-{{ elasticsearch_version }}-x86_64.rpm"
+    validate_certs: false
   register: download_elastic
   delegate_to: localhost
   until: download_elastic is succeeded
