--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,29 @@
 ---
-- import_tasks: precheck.yml
-- name: Check files directory exists
-  file:
-    name: files/
-    state: directory
-  run_once: true
-  delegate_to: localhost
-- include_tasks: "download_{{ ansible_facts.pkg_mgr }}.yml"
-- include_tasks: "install_{{ ansible_facts.pkg_mgr }}.yml"
-- import_tasks: configure.yml
+- block:
+    - name: "Get {{ clickhouse_packages | flatten(1) }} distrib"
+      ansible.builtin.get_url:
+        url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
+        dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
+      with_items: "{{ clickhouse_packages }}"
+      check_mode: false
+  rescue:
+    - name: Get clickhouse distrib
+      ansible.builtin.get_url:
+        url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
+        dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
+      check_mode: false
+- name: Install clickhouse packages
+  become: true
+  ansible.builtin.yum:
+    name:
+      - clickhouse-common-static-{{ clickhouse_version }}.rpm
+      - clickhouse-client-{{ clickhouse_version }}.rpm
+      - clickhouse-server-{{ clickhouse_version }}.rpm
+  notify: Start clickhouse service
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
+- name: Create database
+  ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
+  register: create_db
+  failed_when: create_db.rc != 0 and create_db.rc !=82
+  changed_when: create_db.rc == 0
