--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: "Include elasticsearch-role"
       include_role:
-        name: "mnt-homeworks-ansible"
+        name: "freestyle"
