add when cond for docker

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,5 @@
   ansible.builtin.service:
     name: clickhouse-server
     state: restarted
+  when:
+    - ansible_virtualization_type != "docker"
