modified:   meta/main.yml

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@ galaxy_info:
   author: Alexey Metlyakov
   description: This role install clickhouse on EL
   company: netology
+  role_name: freestyle
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
